"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-01-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-25:
	  prsim new commands: assert-pending, assertn-pending
		assert whether or not node has pending event in queue.
	  Documented, not tested. 


2008-01-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-24:
	  prsim: minor bug fix: enqueuing of events in propagate_evaluate()
		failed to for presence of opposing weak rules, when they
		are enabled, test cases include single weak inverter.
	  Updated some tests with more asserts.


	* HACKT-00-01-04-main-00-82-02-ACT-03-23:
	  prsim: critical bug fix(es):
		fatal typo in Event-prsim.h: pending_interference.
		interference event handling: case immediate -> X was botched,
			now can accommodate unstably-dequeued events 
			while flushing interference events from pending queue.
	  Several test cases added, regression free.


	* HACKT-00-01-04-main-00-82-02-ACT-03-22:
	  prsim: 'step-event' command to advance by step count, 
		as opposed to time increments (old 'step'). 
		Sometime, you only want ONE event.
	  Documented, not tested.  


	* HACKT-00-01-04-main-00-82-02-ACT-03-21:
	  prsim: CRITICAL bug fix: nodes stuck, failing to enqueue X
		events during interference.  bug was sensitive to
		production rule ordering (e.g. inverter) but now symmetrized.
	  Test cases added: inv-{20,21}, inv-alt-{03,04}.


2008-01-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-20:
	  prsim: bug fix: 'unset' was incorrectly setting some nodes to X
		in the event queue.  Test cases added: prsim/interference-*.


	* HACKT-00-01-04-main-00-82-02-ACT-03-19:
	  prsim, chpsim: added support to save/restore random number seed
		through libc's seed48.  Checkpointing now preserves seed.