@@ -4,9 +4,12 @@
 # [weak] ~a -> c+
 # [weak] b  -> c-
 
+# echo-commands on
 weak-rules on
+unstable warn
 timing uniform 10
 
+# order of the next two determines whether there is instability
 set a 1
 set b 0
 cycle
